finishing the game

--- a/blackjack.html
+++ b/blackjack.html
@@ -10,5 +10,6 @@
         <p id="sum">Sum : </p>
         <button id="start" onclick="start()">Start Game</button>
         <button id="newCard" onclick="newCard()">New Card</button>
+        <p id="player">oooo</p>
     </body>
 </html>
